--- a/historyService/src/main/resources/application.properties
+++ b/historyService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=historyService
 
-server.port=8085
+server.port=8080
 
 spring.datasource.url=jdbc:postgresql://${HISTORY_DB_HOST:localhost}:${HISTORY_DB_PORT:5438}/history-service-db
 spring.datasource.username=${HISTORY_DB_USERNAME:postgres}
@@ -8,7 +8,7 @@ spring.datasource.password=${HISTORY_DB_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 
