--- a/storehouse/src/main/resources/application.properties
+++ b/storehouse/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=storehouse
 
-server.port=8083
+server.port=8080
 
 spring.datasource.url=jdbc:postgresql://${STOREHOUSE_DB_HOST:localhost}:${STOREHOUSE_DB_PORT:5437}/storehouse-db
 spring.datasource.username=${STOREHOUSE_DB_USERNAME:postgres}
@@ -8,7 +8,7 @@ spring.datasource.password=${STOREHOUSE_DB_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 
