--- a/storehouse/src/main/resources/application.properties
+++ b/storehouse/src/main/resources/application.properties
@@ -26,3 +26,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
 spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost}:9092
+
+
+integration.internal.host.history=sa-history-app-lb
