--- a/resources-manifest/service-sa-storehouse-app-lb.yaml
+++ b/resources-manifest/service-sa-storehouse-app-lb.yaml
@@ -3,9 +3,11 @@ kind: Service
 metadata:
   name: sa-storehouse-app-lb
 spec:
+  type: NodePort
   ports:
     - port: 80
       protocol: TCP
       targetPort: 8080
+      nodePort: 30001
   selector:
     app: sa-storehouse-app
