--- a/storehouse/build.gradle
+++ b/storehouse/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.5.0-SNAPSHOT'
+	id 'org.springframework.boot' version '3.4.2'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -40,6 +40,7 @@ dependencies {
 	runtimeOnly group: 'org.flywaydb', name: 'flyway-database-postgresql', version: '11.2.0'
 	implementation 'org.springframework.kafka:spring-kafka'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.2.0'
 }
 
 tasks.named('test') {
