--- a/tgbot/src/main/resources/application.properties
+++ b/tgbot/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.application.name=storehouse
+spring.application.name=tgbot
 
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://${STOREHOUSE_DB_HOST:localhost}:${STOREHOUSE_DB_PORT:5437}/storehouse-db
-spring.datasource.username=${STOREHOUSE_DB_USERNAME:postgres}
-spring.datasource.password=${STOREHOUSE_DB_PASSWORD:postgres}
+spring.datasource.url=jdbc:postgresql://${TGBOT_DB_HOST:localhost}:${TGBOT_DB_PORT:5439}/tgbot-db
+spring.datasource.username=${TGBOT_DB_USERNAME:postgres}
+spring.datasource.password=${TGBOT_DB_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -14,7 +14,7 @@ logging.level.org.hibernate.SQL=DEBUG
 
 spring.datasource.hikari.maximum-pool-size=20
 
-spring.datasource.hikari.pool-name=storehouse-ds
+spring.datasource.hikari.pool-name=tgbot-ds
 spring.datasource.hikari.auto-commit=true
 spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
 spring-jpa.open-in-view=false
@@ -24,8 +24,7 @@ spring.flyway.baseline-on-migrate=true
 logging.level.org.flywaydb.core=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-
-spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost}:9092
-
-
-integration.internal.host.history=sa-history-app-lb
+tg.bot.name=overmoney_vl2_bot
+tg.bot.token=7646051916:AAETLO4PjCY1hsGv8vBUFhY_oVDFmno4yCs
+app.scheduler.enabled=true
+integration.internal.host.storehouse=http://sa-storehouse-app-lb
