--- a/tgbot/src/main/resources/application-dev.properties
+++ b/tgbot/src/main/resources/application-dev.properties
@@ -1,2 +1,4 @@
 server.port=8082
 integration.internal.host.storehouse=http://localhost:8080
+integration.internal.host.history=http://localhost:8081
+integration.internal.host.tg.sender=http://localhost:5000
