--- a/tgbot/src/main/resources/application.properties
+++ b/tgbot/src/main/resources/application.properties
@@ -1,30 +1,8 @@
 spring.application.name=tgbot
 
-server.port=8080
+server.port=8085
 
-spring.datasource.url=jdbc:postgresql://${TGBOT_DB_HOST:localhost}:${TGBOT_DB_PORT:5439}/tgbot-db
-spring.datasource.username=${TGBOT_DB_USERNAME:postgres}
-spring.datasource.password=${TGBOT_DB_PASSWORD:postgres}
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-logging.level.org.hibernate.SQL=DEBUG
-
-spring.datasource.hikari.maximum-pool-size=20
-
-spring.datasource.hikari.pool-name=tgbot-ds
-spring.datasource.hikari.auto-commit=true
-spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
-spring-jpa.open-in-view=false
-
-spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=true
-logging.level.org.flywaydb.core=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-tg.bot.name=overmoney_vl2_bot
-tg.bot.token=7646051916:AAETLO4PjCY1hsGv8vBUFhY_oVDFmno4yCs
 app.scheduler.enabled=true
 integration.internal.host.storehouse=http://sa-storehouse-app-lb
+integration.internal.host.history=http://sa-history-app-lb
+integration.internal.host.tg.sender=http://my-app-k8s-telegram-sender
