--- a/resources-manifest/templates/service-sa-healthcheck-telegram-app-lb.yaml
+++ b/resources-manifest/templates/service-sa-healthcheck-telegram-app-lb.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sa-tgbot-app-lb
+  name: sa-healthcheck-telegram-app-lb
 spec:
   type: NodePort
   ports:
     - port: 80
       protocol: TCP
       targetPort: 8080
-      nodePort: 30003
+      nodePort: 30007
   selector:
-    app: sa-tgbot-app
+    app: sa-health-telegram-app
